# cassandra_2026

./: .env.example  .gitignore  pyproject.toml
cassandra_2026/: a.py
cassandra_2026/systems/filez/: common.py  example_zero.py  model.py  repo.py  statements.py  todo_.md  uploader.py
cassandra_2026/systems/filez/cli/: gg.py  main.py  repository.py  setup.md
cassandra_2026/systems/filez/cluster_setup/: installation_notes.md
cassandra_2026/systems/filez/migrations/: m_0.cql  m_1.cql
cassandra_2026/systems/readings/: models.py  repository.py  seeder.py  usage.py
cassandra_2026/systems/readings/migrations/: m_0.cql  m_1.cql  m_2.cql
